[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# WASM Targets
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git", rev = "851f6f08675444fb6fa088b9e67bee9fd75554c6", features = [
    "serde",
] }
# Desktop Targets
# bracket-lib = { version = "~0.8", features = [
#     "webgpu",
# ], default-features = false }

specs = "0.20"
specs-derive = "0.4"
